--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,10 +43,10 @@
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:largeHeap="true" />
+        android:largeHeap="true" >
          
         <activity
-            android:name=".ui.SplashActivity"
+            android:name=".ui.activity.SplashActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
