--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -55,6 +55,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.activity.LoginActivity"
+            android:screenOrientation="portrait" >
+        </activity>
         
     </application>
 
